--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                 <ul>
                     <li>Supported the team "Mobility and Traffic Planning" in day-to-day business.</li>
                     <li>Created response drafts for citizens' inquiries.</li>
-                    <li>Organisated events for participation as part of the project to create the urban Mobility Concept 2030</li>
-                    <li>Implemented and evaluated traffic surveys in the entire city area</li>
-                    <li>Created a location concept for town twinning signs</li>
-                    <li>Created a priority list for the city's LED Street light Conversion Programm</li>
+                    <li>Organisated events for participation as part of the project to create the urban Mobility Concept 2030.</li>
+                    <li>Implemented and evaluated traffic surveys in the entire city area.</li>
+                    <li>Created a location concept for town twinning signs.</li>
+                    <li>Created a priority list for the city's LED Street light Conversion Programm.</li>
                 </ul>
             </p>
         </li>
@@ -119,10 +119,10 @@
             </p>
             <p>
                 <ul>
-                    <li>Prepared, displayed, served and sold food and beverages in the university's café</li>
-                    <li>Ensured cleanliness and tidiness in the café and storage area</li>
-                    <li>Responsiblity for the cash balancing</li>
-                    <li>Responsiblity for the closure of the café</li>
+                    <li>Prepared, displayed, served and sold food and beverages in the university's café.</li>
+                    <li>Ensured cleanliness and tidiness in the café and storage area.</li>
+                    <li>Responsiblity for the cash balancing.</li>
+                    <li>Responsiblity for the closure of the café.</li>
                 </ul>
             </p>
         </li>
