--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                 <ul>
                     <li>Supported the team "Mobility and Traffic Planning" in day-to-day business.</li>
                     <li>Created response drafts for citizens' inquiries.</li>
-                    <li>Organisated events for participation as part of the project to create the urban Mobility Concept 2030</li>
-                    <li>Implemented and evaluated traffic surveys in the entire city area</li>
-                    <li>Created a location concept for town twinning signs</li>
-                    <li>Created a priority list for the city's LED Street light Conversion Programm</li>
+                    <li>Organisated events for participation as part of the project to create the urban Mobility Concept 2030.</li>
+                    <li>Implemented and evaluated traffic surveys in the entire city area.</li>
+                    <li>Created a location concept for town twinning signs.</li>
+                    <li>Created a priority list for the city's LED Street light Conversion Programm.</li>
                 </ul>
             </p>
         </li>
@@ -156,7 +156,7 @@
     <hr />
     <h2>Awards and Certifications</h2>
     <ul>
-        <li>Award of the Business Advisory Board (Facutly B, HfT Stuttgart) for Master Thesis (2022)</li>
+        <li>Award for Master Thesis from the Business Advisory Board of Faculty B, Hochschule für Technik Stuttgart (2022)</li>
     </ul>
     <hr />
     <h2>Other</h2>
