--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="./assets/images/profile-photo.jpeg" height="200" alt="Photo" />
     <h2>Summary</h2>
     <p>
-        I am a hardworking and dedicated individual with experience in transportation engineering, public administration and customer service.<br />
+        I am a hardworking and dedicated individual with experience in traffic and transportation engineering, public administration and customer service.<br />
         I have just started working towards becoming a Full Stack Developer. <br />
         My motto: "The sky is the limit!"
     </p>
